Adjust a DCHECK in leveldb_wrapper_impl.cc

Bug: 759997
Change-Id: I268a70c37d963bf4f732e71b2455306e3dd3925b